--- a/www/index.html
+++ b/www/index.html
@@ -1,93 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>node-sass-scaffold</title>
-    <link rel="stylesheet" href="/style.css" />
-    <title>Calendrify</title>
-  </head>
 
-  <body>
-    <header>
-      <!-- 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Calendrify - beställ din kalender här!</title>
+  <link rel="stylesheet" href="/style.css">
+</head>
+
+<body>
+  <!-- We are hard coding the header and footer section-->
+  <!-- The main section will be populated by our class instances-->
+  <header>
+    <!-- 
       Please Note:
       The navbar component is the only Bootstrap
       component that should not be placed inside
       a container -> row -> col structure... 
     -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
-        <a class=" navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
-    <main class="container mt-5">
-      <section class="row">
-        <div class="col">
-          <h1>Hello world!</h1>
-        </div>
-      </section>
-    </main>
-
-    <footer class="container-fluid mt-5 bg-primary text-light">
-      <div class="row">
-        <div class="col">
-          <p class="m-0 py-3 text-center">©️NodeHill 2019</p>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
+      <a class=" navbar-brand" href="#">BadButiken</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Start</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#omoss">Om oss</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#produkter">Produkter</a>
+          </li>
+        </ul>
       </div>
-    </footer>
+    </nav>
+  </header>
 
-    <script src="/js/libs/jquery.js"></script>
-    <script src="/js/libs/popper.js"></script>
-    <script src="/js/libs/bootstrap.js"></script>
+  <main class="container mt-4">
+  </main>
 
-    <script src="/js/store.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+  <footer class="container-fluid mt-4 bg-primary text-light">
+    <div class="row">
+      <div class="col">
+        <p class="m-0 py-3 text-center">©️BadButiken 2019</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/js/libs/jquery.js"></script>
+  <script src="/js/libs/popper.js"></script>
+  <script src="/js/libs/bootstrap.js"></script>
+
+  <script src="/js/store.js"></script>
+  <script src="/js/App.js"></script>
+  <script src="/js/Cart.js"></script>
+  <script src="/js/StartPage.js"></script>
+  <script src="/js/ProductList.js"></script>
+  <script src="/js/Product.js"></script>
+  <script src="/js/AboutUs.js"></script>
+  <script src="/js/Page404.js"></script>
+  <script src="/js/main.js"></script>
+
+</body>
+
 </html>
