Uppdaterat JSON Sofia + Janis

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,9 @@
       a container -> row -> col structure... 
     -->
       <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
-        <a class=" navbar-brand" href="#">BadButiken</a>
+        <a class=" navbar-brand" href="#"
+          ><img src="/images/kalender2.jpg" width="50" alt="" /> Calendrify</a
+        >
         <button
           class="navbar-toggler"
           type="button"
