Finished the cartmanager Pair programming: Sofia + Janis

--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,7 @@
     <script src="/js/libs/bootstrap.js"></script>
 
     <script src="/js/store.js"></script>
+    <script src="/js/cartManager.js"></script>
     <script src="/js/App.js"></script>
     <script src="/js/Cart.js"></script>
     <script src="/js/StartPage.js"></script>
