animated product image flying to cart
changed logo/favicon
animated product image flying to cart icon
change fonts

Co-Authored-By: BitLord69 <janis_k@hotmail.com>

--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Calendrify - beställ din kalender här!</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/fed1dc7fbf.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/style.css" />
   </head>
 
@@ -26,7 +24,7 @@
     -->
       <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
         <a class=" navbar-brand" href="#"
-          ><img src="/images/kalender2.jpg" width="50" alt="" /> Calendrify</a
+          ><img src="https://img.icons8.com/cute-clipart/64/000000/calendar.png" width="50" alt="" /> Calendrify</a
         >
         <button
           class="navbar-toggler"
@@ -52,6 +50,7 @@
             </li>
           </ul>
         </div>
+        <i class="fas fa-shopping-cart"></i>
       </nav>
     </header>
 
@@ -68,6 +67,7 @@
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/popper.js"></script>
     <script src="/js/libs/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
     <script src="/js/store.js"></script>
     <script src="/js/App.js"></script>
