--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Calendrify - beställ din kalender här!</title>
-    <script src="https://kit.fontawesome.com/fed1dc7fbf.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
+    <script
+      src="https://kit.fontawesome.com/fed1dc7fbf.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style.css" />
   </head>
 
@@ -24,7 +30,12 @@
     -->
       <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
         <a class=" navbar-brand" href="#"
-          ><img src="https://img.icons8.com/cute-clipart/64/000000/calendar.png" width="50" alt="" /> Calendrify</a
+          ><img
+            src="https://img.icons8.com/cute-clipart/64/000000/calendar.png"
+            width="50"
+            alt=""
+          />
+          Calendrify</a
         >
         <button
           class="navbar-toggler"
@@ -46,7 +57,7 @@
               <a class="nav-link" href="#omoss">Om oss</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#produkter">Produkter</a>
+              <a class="nav-link" href="#produkter">Kalendrar</a>
             </li>
           </ul>
         </div>
@@ -67,7 +78,6 @@
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/popper.js"></script>
     <script src="/js/libs/bootstrap.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
     <script src="/js/store.js"></script>
     <script src="/js/cartManager.js"></script>
