navbar animation and added /*html*/ to ProductList
Co-Authored-By: BitLord69 <janis_k@hotmail.com>
Co-Authored-By: soffred <soffred@users.noreply.github.com>

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/navbar-animation.css">
   </head>
 
   <body>
@@ -59,6 +60,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#produkter">Kalendrar</a>
             </li>
+            <section class="toAnimate"></section>
           </ul>
         </div>
         <i class="fas fa-shopping-cart"></i>
