--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
 
   <body>
@@ -29,7 +30,7 @@
       a container -> row -> col structure... 
     -->
       <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
-        <a class=" navbar-brand" href="#"
+        <a class="navbar-brand" href="#"
           ><img
             src="https://img.icons8.com/cute-clipart/64/000000/calendar.png"
             width="50"
@@ -61,7 +62,32 @@
             </li>
           </ul>
         </div>
-        <i class="fas fa-shopping-cart"></i>
+
+        <div>
+          <ul class="nav navbar-nav navbar-right navbar-dark ">
+            <li class="dropdown">
+              <a
+                href="#"
+                class="dropdown-toggle navbar-brand"
+                data-toggle="dropdown"
+                role="button"
+                aria-expanded="false"
+              >
+                <i class="fas fa-shopping-cart"></i
+                ><span id="articles-in-cart"></span> - Varukorg<span
+                  class="caret"
+                ></span
+              ></a>
+              <ul
+                class="dropdown-menu dropdown-cart"
+                role="menu"
+                id="cart-menu"
+              >
+                <!-- Cart items and link to cart are inserted above this from the Cart.js-file -->
+              </ul>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -80,6 +106,7 @@
     <script src="/js/libs/bootstrap.js"></script>
 
     <script src="/js/store.js"></script>
+    <script src="/js/CartItem.js"></script>
     <script src="/js/cartManager.js"></script>
     <script src="/js/App.js"></script>
     <script src="/js/Cart.js"></script>
