Menu half/way fixed Small change in vart and cartitem, to use the correct id

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
       component that should not be placed inside
       a container -> row -> col structure... 
     -->
+
       <nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-dark">
         <a class="navbar-brand" href="#"
           ><img
@@ -51,7 +52,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto animate-ul">
             <li class="nav-item">
               <a class="nav-link" href="#">Start</a>
             </li>
@@ -65,8 +66,8 @@
           </ul>
         </div>
 
-        <div>
-          <ul class="nav navbar-nav navbar-right navbar-dark ">
+        <div class="navbar-right">
+          <ul class="nav navbar-nav  navbar-dark ">
             <li class="dropdown">
               <a
                 href="#"
