Drop down meny fixed!!!

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
                 ></span
               ></a>
               <ul
-                class="dropdown-menu dropdown-cart"
+                class="dropdown-menu dropdown-menu-right dropdown-cart"
                 role="menu"
                 id="cart-menu"
               >
