--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,8 @@
     <script src="/js/libs/popper.js"></script>
     <script src="/js/libs/bootstrap.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-
+    
+    <script src="/js/AddressForm.js"></script>
     <script src="/js/store.js"></script>
     <script src="/js/CartItem.js"></script>
     <script src="/js/cartManager.js"></script>
