Draft for the start page
Co-authored-by: Soffred <sofia.fredmans@gmail.com> + Joacim

--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,14 @@
       href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/startpage.css" />
     <link rel="stylesheet" href="/navbar-animation.css" />
   </head>
 
@@ -99,7 +105,7 @@
     <footer class="container-fluid mt-4 bg-primary text-light">
       <div class="row">
         <div class="col">
-          <p class="m-0 py-3 text-center">©️Calendrify 2019</p>
+          <p class="m-0 py-3 text-center text-light">©️Calendrify 2019</p>
         </div>
       </div>
     </footer>
