--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/confirmation.css" />
     <link rel="stylesheet" href="/navbar-animation.css" />
   </head>
 
