--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
       a container -> row -> col structure... 
     -->
 
-      <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
+      <nav class="navbar navbar-expand-lg fixed-top bg-primary navbar-dark">
         <a class="navbar-brand" href="#"
           ><img
             src="https://img.icons8.com/cute-clipart/64/000000/calendar.png"
@@ -103,7 +103,7 @@
 
     <main class="container mt-4"></main>
 
-    <footer class="container-fluid mt-4 bg-primary">
+    <footer class="container-fluid fixed-bottom mt-4 bg-primary">
       <div class="row">
         <div class="col">
           <p class="m-0 py-3 text-center text-tertiary">©️Calendrify 2019</p>
