small changes to about us text and removed fixed footer again

--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
 
     <main class="container mt-4"></main>
 
-    <footer class="container-fluid fixed-bottom mt-4 bg-primary">
+    <footer class="container-fluid mt-4 bg-primary">
       <div class="row">
         <div class="col">
           <p class="m-0 py-3 text-center text-tertiary">©️Calendrify 2019</p>
