--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Calendrify - beställ din kalender här!</title>
     <script
       src="https://kit.fontawesome.com/fed1dc7fbf.js"
@@ -116,8 +118,13 @@
 
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/popper.js"></script>
+    <script
+      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+      integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+      crossorigin="anonymous"
+    ></script>
     <script src="/js/libs/bootstrap.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
 
     <script src="/js/Confirmation.js"></script>
     <script src="/js/AddressForm.js"></script>
