--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/aboutus.css" />
     <link rel="stylesheet" href="/startpage.css" />
     <link rel="stylesheet" href="/confirmation.css" />
     <link rel="stylesheet" href="/navbar-animation.css" />
