--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
       a container -> row -> col structure... 
     -->
 
-      <nav class="navbar navbar-expand-lg fixed-top bg-primary navbar-dark">
+      <nav class="navbar navbar-expand-md fixed-top bg-primary navbar-dark">
         <a class="navbar-brand" href="#"
           ><img
             src="https://img.icons8.com/cute-clipart/64/000000/calendar.png"
