Changed all URLs to the site works on external server Added link to favicon in index.html Removed Swedish characters from file names

--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,9 @@
       href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="favicon.ico" />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -125,38 +126,37 @@
         <div class="col">
           <p class="m-0 py-3 text-center text-tertiary">©️Calendrify 2019</p>
           <audio id="pop">
-            <source src="/audio/swooshing.mp3" type="audio/mpeg" />
+            <source src="audio/swooshing.mp3" type="audio/mpeg" />
           </audio>
         </div>
       </div>
     </footer>
 
-    <script src="/js/libs/jquery.js"></script>
-    <script src="/js/libs/popper.js"></script>
+    <script src="js/libs/jquery.js"></script>
+    <script src="js/libs/popper.js"></script>
     <script
       src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
       integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
       crossorigin="anonymous"
     ></script>
-    <script src="/js/libs/bootstrap.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
+    <script src="js/libs/bootstrap.js"></script>
 
-    <script src="/js/OrderItem.js"></script>
-    <script src="/js/Order.js"></script>
-    <script src="/js/OrderManager.js"></script>
+    <script src="js/OrderItem.js"></script>
+    <script src="js/Order.js"></script>
+    <script src="js/OrderManager.js"></script>
 
-    <script src="/js/Confirmation.js"></script>
-    <script src="/js/AddressForm.js"></script>
-    <script src="/js/store.js"></script>
-    <script src="/js/CartItem.js"></script>
-    <script src="/js/CartManager.js"></script>
-    <script src="/js/App.js"></script>
-    <script src="/js/Cart.js"></script>
-    <script src="/js/StartPage.js"></script>
-    <script src="/js/ProductList.js"></script>
-    <script src="/js/Product.js"></script>
-    <script src="/js/AboutUs.js"></script>
-    <script src="/js/Page404.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/Confirmation.js"></script>
+    <script src="js/AddressForm.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/CartItem.js"></script>
+    <script src="js/CartManager.js"></script>
+    <script src="js/App.js"></script>
+    <script src="js/Cart.js"></script>
+    <script src="js/StartPage.js"></script>
+    <script src="js/ProductList.js"></script>
+    <script src="js/Product.js"></script>
+    <script src="js/AboutUs.js"></script>
+    <script src="js/Page404.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
